syntax = "proto3";

package elys.clob;

option go_package = "github.com/elys-network/elys/x/clob/types";

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

// key = owner + market_id
message PerpetualOwner {
  string owner = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  uint64 market_id = 2;
  uint64 perpetual_id = 3;
}

// key = market_id + id
message Perpetual {
  uint64 id = 1;
  uint64 market_id = 2;
  string entry_price = 3 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  string owner = 4 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  // quantity of the order
  string quantity = 5 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  string margin = 6 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  string entry_funding_rate = 7 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
}

message PerpetualCounter {
  uint64 market_id = 1;
  uint64 counter = 2;
}