syntax = "proto3";

package elys.clob;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "elys/clob/params.proto";
import "elys/clob/market.proto";
import "elys/clob/subaccount.proto";
import "elys/clob/order.proto";
import "elys/clob/perpetual.proto";
import "elys/clob/adl.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/elys-network/elys/x/clob/types";

// Query defines the gRPC querier service.
service Query {

  rpc Params(ParamsRequest) returns (ParamsResponse) {
    option (google.api.http).get = "/elys-network/elys/clob/params";
  }

  rpc AllMarkets(AllMarketsRequest) returns (AllMarketsResponse) {
    option (google.api.http).get = "/elys-network/elys/clob/all-markets";
  }

  rpc SubAccounts(SubAccountsRequest) returns (SubAccountsResponse) {
    option (google.api.http).get = "/elys-network/elys/clob/sub-accounts";
  }

  rpc MarketOrders(MarketOrdersRequest) returns (MarketOrdersResponse) {
    option (google.api.http).get = "/elys-network/elys/clob/market-orders";
  }

  rpc OwnerPerpetuals(OwnerPerpetualsRequest)
      returns (OwnerPerpetualsResponse) {
    option (google.api.http).get = "/elys-network/elys/clob/owner-perpetuals";
  }

  rpc PerpetualOrder(PerpetualOrderRequest)
      returns (PerpetualOrderResponse) {
    option (google.api.http).get = "/elys-network/elys/clob/perpetual-order";
  }

  rpc AllPerpetualOrder(AllPerpetualOrderRequest)
      returns (AllPerpetualOrderResponse) {
    option (google.api.http).get = "/elys-network/elys/clob/all-perpetual-order";
  }

  rpc CurrentTwapPrice(CurrentTwapPriceRequest)
      returns (CurrentTwapPriceResponse) {
    option (google.api.http).get = "/elys-network/elys/clob/current-twap-price/{market_id}";
  }

  rpc AllTwapPrices(AllTwapPricesRequest)
      returns (AllTwapPricesResponse) {
    option (google.api.http).get = "/elys-network/elys/clob/all-twap-prices";
  }

  rpc LastAverageTradePrice(LastAverageTradePriceRequest)
      returns (LastAverageTradePriceResponse) {
    option (google.api.http).get = "/elys-network/elys/clob/last-avg-trade-price/{market_id}";
  }

  rpc HighestBuyPrice(HighestBuyPriceRequest)
      returns (HighestBuyPriceResponse) {
    option (google.api.http).get = "/elys-network/elys/clob/highest-buy-price/{market_id}";
  }

  rpc LowestSellPrice(LowestSellPriceRequest)
      returns (LowestSellPriceResponse) {
    option (google.api.http).get = "/elys-network/elys/clob/lowest-sell-price/{market_id}";
  }

  rpc MidPrice(MidPriceRequest)
      returns (MidPriceResponse) {
    option (google.api.http).get = "/elys-network/elys/clob/mid-price/{market_id}";
  }

  rpc PerpetualADL(PerpetualADLRequest)
      returns (PerpetualADLResponse) {
    option (google.api.http).get = "/elys-network/elys/clob/perpetual-adl/{market_id}/{id}";
  }

  rpc AllPerpetualADL(AllPerpetualADLRequest)
      returns (AllPerpetualADLResponse) {
    option (google.api.http).get = "/elys-network/elys/clob/all-perpetual-adl";
  }
}

message ParamsRequest {}

message ParamsResponse { Params params = 1 [ (gogoproto.nullable) = false ]; }

message AllMarketsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message AllMarketsResponse {
  repeated PerpetualMarket perpetual_markets = 1
      [ (gogoproto.nullable) = false ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message SubAccountsRequest {
  string address = 1;
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

message SubAccountsResponse {
  cosmos.base.query.v1beta1.PageResponse pagination = 1;
  repeated SubAccount subAccounts = 2 [ (gogoproto.nullable) = false ];
}

message MarketOrdersRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
  uint64 market_id = 2;
  bool is_buy = 3;
}

message MarketOrdersResponse {
  repeated PerpetualOrder orders = 1 [ (gogoproto.nullable) = false ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message OwnerPerpetualsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
  string owner = 2;
}

message OwnerPerpetualsResponse {
  repeated Perpetual list = 1 [ (gogoproto.nullable) = false ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message PerpetualOrderRequest {
  uint64 market_id = 1;
  OrderType order_type = 2;
  string price = 3 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  uint64 block_height = 4;
}

message PerpetualOrderResponse {
  PerpetualOrder order = 1 [ (gogoproto.nullable) = false ];
}

message AllPerpetualOrderRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message AllPerpetualOrderResponse {
  repeated PerpetualOrder orders = 1 [ (gogoproto.nullable) = false ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message CurrentTwapPriceRequest {
  uint64 market_id = 1;
}

message CurrentTwapPriceResponse {
  string price = 1 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
}

message AllTwapPricesRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message AllTwapPricesResponse {
  repeated TwapPrice twap_prices = 1 [ (gogoproto.nullable) = false ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message LastAverageTradePriceRequest {
  uint64 market_id = 1;
}

message LastAverageTradePriceResponse {
  string price = 1 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
}

message HighestBuyPriceRequest {
  uint64 market_id = 1;
}

message HighestBuyPriceResponse {
  string price = 1 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
}

message LowestSellPriceRequest {
  uint64 market_id = 1;
}

message LowestSellPriceResponse {
  string price = 1 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
}

message MidPriceRequest {
  uint64 market_id = 1;
}

message MidPriceResponse {
  string price = 1 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
}

message PerpetualADLRequest {
  uint64 market_id = 1;
  uint64 id = 2;
}

message PerpetualADLResponse {
  PerpetualADL adl = 1 [ (gogoproto.nullable) = false ];
}

message AllPerpetualADLRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message AllPerpetualADLResponse {
  repeated PerpetualADL adl_list = 1 [ (gogoproto.nullable) = false ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}